# openfoodfacts-data-quality

./: .dockerignore  .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish-demo-image.yml  publish-google-sheets-demo-image.yml  publish-migration-demo-image.yml  release-library.yml  validate-pull-request-title.yml
app/: __init__.py  application.py  artifacts.py  legacy_source.py  main.py
app/legacy_backend/: contracts.py  input_payloads.py  input_projection.py  off_runtime.pl  runner.py
app/migration/: __init__.py  catalog.py
app/parity/: __init__.py  accumulator.py  comparator.py  models.py  policy.py  serialization.py
app/pipeline/: __init__.py  batch_inputs.py  context_builders.py  execution.py  models.py  orchestrator.py  preparation.py  profiles.py  progress.py  scheduler.py
app/reference/: __init__.py  cache.py  findings.py  loader.py  materializers.py  models.py  observers.py
app/report/: __init__.py  downloads.py  legacy_source.py  payloads.py  preview.py  renderer.py  snippets.py
app/run/: __init__.py  accumulator.py  context_builders.py  execution.py  models.py  orchestrator.py  preparation.py  profiles.py  progress.py  runners.py  scheduler.py  serialization.py  settings.py
app/source/: __init__.py  datasets.py  duckdb_products.py  models.py  product_documents.py  snapshots.py
app/sources/: duckdb_products.py
app/storage/: __init__.py  run_queries.py  run_store.py
apps/: __init__.py
apps/google_sheets/: .env.example  Dockerfile  README.md  __init__.py  api.py  build_image.sh  compose.yaml  data_sources.py  server.py  workflow.py
config/: check-profiles.toml  dataset-profiles.toml
docs/: glossary.md  index.md
docs/architecture/: application-run-flow.md  check-system.md  data-contracts.md  index.md  parity-pipeline.md  system-overview.md
docs/concepts/: check-model.md  how-an-application-run-works.md  reference-and-parity.md  runtime-model.md  system-architecture.md
docs/explanation/: application-runs.md  migrated-checks.md  migration-runs.md  project-scope.md  reference-data-and-parity.md  runtime-model.md  system-architecture.md
docs/getting-started/: index.md  reading-the-report.md  troubleshooting.md
docs/guides/: authoring-checks.md  index.md  library-usage.md  local-development.md
docs/how-to/: author-checks.md  review-a-run-report.md  run-the-project-locally.md  troubleshoot-local-runs.md  use-the-python-library.md  validate-changes.md
docs/operations/: ci-and-releases.md  configuration-and-artifacts.md  index.md  legacy-backend-image.md  legacy-inventory.md
docs/project/: index.md  lessons-from-the-prototype.md  overview-and-scope.md  roadmap-and-open-questions.md
docs/reference/: check-metadata-and-selection.md  ci-and-releases.md  data-contracts.md  glossary.md  index.md  legacy-backend-image.md  report-artifacts.md  run-configuration-and-artifacts.md  testing-and-quality.md
examples/: README.md  basic_usage.py  input_formats.py  jupytext.toml  jurisdiction_filtering.py
examples/data/: products.csv  products.duckdb  products.duckdb.snapshot.json  products.jsonl  products.jsonl.snapshot.json  products.parquet
examples/google_sheets_demo/: .env.example  Dockerfile  README.md  __init__.py  api.py  build_image.sh  compose.yaml  data_sources.py  models.py  server.py  workflow.py
examples/notebooks/: basic_usage.ipynb  input_formats.ipynb  jurisdiction_filtering.ipynb
examples/scripts/: basic_usage.py  input_formats.py  jurisdiction_filtering.py
migration/: __init__.py  _progress.py  _value_shapes.py  artifacts.py  cli.py  legacy_source.py  logging_config.py  site_builder.py
migration/legacy_backend/: __init__.py  contracts.py  input_payloads.py  runner.py
migration/parity/: comparator.py
migration/reference/: __init__.py  cache.py  findings.py  loader.py  materializers.py  models.py  observers.py
migration/report/: __init__.py  payloads.py  renderer.py  snippets.py
migration/run/: __init__.py  accumulator.py  context_builders.py  execution.py  models.py  orchestrator.py  preparation.py  profiles.py  progress.py  runners.py  scheduler.py  serialization.py  settings.py
migration/source/: __init__.py  _product_documents_common.py  _product_documents_duckdb.py  _product_documents_jsonl.py  datasets.py  models.py  product_documents.py
migration/storage/: __init__.py  run_queries.py  run_store.py
scripts/: _bootstrap.py  apply_inventory_assessment.py  benchmark_run.py  build_docker_image.sh  export_legacy_inventory.py  refresh_example_data.py  refresh_sample_duckdb.py  refresh_sample_jsonl.py  smoke_test_container_image.py  sync_example_notebooks.py  validate_dsl.py  verify_built_distribution.py
src/off_data_quality/: __init__.py  _nutrition.py  _provider_api.py  _row_checks_api.py  _scalars.py  _source_product_preparation.py  _source_products.py  _structured_values.py  catalog.py  execution.py  metadata.py
src/openfoodfacts_data_quality/: __init__.py  _provider_api.py  (+9 more)
tests/: conftest.py  test_api.py  test_apply_inventory_assessment.py  test_canada_checks.py  test_capabilities.py  test_catalog.py  test_check_identity.py  test_check_profiles.py  test_checks.py  test_context_builder.py  test_context_contract.py  test_dataset_profiles.py  test_dsl.py  test_dsl_capabilities.py  test_duckdb_products.py  test_engine_and_parity.py  test_execution_progress.py  test_legacy_backend.py  test_legacy_backend_result_cache.py  test_legacy_inventory.py  test_logging_config.py  test_migration_catalog.py  test_package_namespace.py  test_packaging_boundaries.py  test_parity_policy.py  test_parity_serialization.py  test_pipeline.py  test_product_documents.py  test_progress.py  test_python_check_contract.py  test_reference_loader.py  test_refresh_example_data.py  test_refresh_sample_jsonl.py  test_renderer.py  test_run_artifact.py  test_run_flow.py  test_run_store.py  test_snippets.py  test_source_input_boundary.py  test_source_rows.py  (+4 more)
ui/: __init__.py  rendering.py
(+116 files in other folders)
