[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfoodfacts-data-quality"
version = "0.6.0"
description = "Reusable Python runtime for migrated Open Food Facts data quality checks."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "jsonschema>=4,<5",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
app = [
  "duckdb==1.4.4",
  "Jinja2==3.1.6",
  "jsonschema==4.25.1",
  "Pygments==2.19.2",
  "pydantic==2.12.5",
  "PyYAML==6.0.3",
  "tree-sitter==0.25.2",
  "tree-sitter-language-pack==0.13.0",
]
dev = [
  "build>=1,<2",
  "coverage[toml]>=7,<8",
  "mypy>=1,<2",
  "pre-commit>=4,<5",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.15,<0.16",
  "types-jsonschema>=4,<5",
  "types-Pygments>=2,<3",
  "types-PyYAML>=6,<7",
  "vulture>=2,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openfoodfacts_data_quality*", "off_data_quality*"]

[tool.setuptools.package-data]
openfoodfacts_data_quality = [
  "py.typed",
  "checks/packs/dsl/*.yaml",
  "checks/dsl/capabilities.json",
  "checks/dsl/schema/definitions.schema.json",
]

[tool.ruff]
target-version = "py314"
src = ["app", "examples", "scripts", "src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.coverage.run]
branch = true
source = ["app", "src/openfoodfacts_data_quality"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "src", "scripts"]
addopts = "-ra"

[tool.mypy]
python_version = "3.14"
files = ["app", "src", "tests", "examples", "scripts"]
mypy_path = ["src", "scripts"]
explicit_package_bases = true
strict = true
pretty = true
show_error_codes = true
show_error_context = true

[tool.vulture]
paths = ["app", "examples", "scripts", "src"]
exclude = [
  ".venv/",
  "artifacts/",
  "build/",
  "data/",
  "dist/",
  "src/openfoodfacts_data_quality/contracts/context.py",
  "src/openfoodfacts_data_quality/contracts/enrichment.py",
  "src/openfoodfacts_data_quality/contracts/source_products.py",
  "src/openfoodfacts_data_quality/contracts/snapshot_fields.py",
  "src/openfoodfacts_data_quality/contracts/structured.py",
]
ignore_decorators = ["@check", "@model_validator"]
ignore_names = [
  "CHECK_PACK_METADATA",
  "bug",
  "completeness",
  "error",
  "load_check_evaluators",
  "model_config",
  "panel_tooltip",
  "run_checks",
  "side",
  "tooltip",
]
min_confidence = 60
sort_by_size = true
